[package]
name = "aps-commercial_products"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
validation-errors.workspace = true
rosetta-uuid.workspace = true
aps-asset_models.workspace = true
aps-brands.workspace = true
aps-entities.workspace = true
aps-freeze_dryer_models.workspace = true
aps-freezer_models.workspace = true
aps-geopositioning_device_models.workspace = true
aps-mass_spectrometer_models.workspace = true
aps-namespaced_ownables.workspace = true
aps-ownables.workspace = true
aps-personal_protective_equipment_models.workspace = true
aps-physical_asset_models.workspace = true
aps-volume_measuring_device_models.workspace = true
aps-weighing_device_models.workspace = true

[lints]
workspace = true
