[package]
name = "aps-container_sealing_procedure_templates"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta-uuid.workspace = true
aps-asset_compatibility_rules.workspace = true
aps-container_sealer_models.workspace = true
aps-ownables.workspace = true
aps-procedure_template_asset_models.workspace = true
aps-procedure_templates.workspace = true
aps-reused_procedure_template_asset_models.workspace = true
aps-volumetric_container_models.workspace = true

[lints]
workspace = true
