[package]
name = "aps-dag-procedure_templates"
version = "0.1.0"
edition.workspace = true


[dependencies]
aps-aliquoting_procedure_templates.workspace = true
aps-aliquoting_procedures.workspace = true
aps-ball_mill_procedure_templates.workspace = true
aps-ball_mill_procedures.workspace = true
aps-centrifuge_procedure_templates.workspace = true
aps-centrifuge_procedures.workspace = true
aps-container_sealing_procedure_templates.workspace = true
aps-container_sealing_procedures.workspace = true
aps-disposal_procedure_templates.workspace = true
aps-disposal_procedures.workspace = true
aps-fractioning_procedure_templates.workspace = true
aps-fractioning_procedures.workspace = true
aps-freeze_drying_procedure_templates.workspace = true
aps-freeze_drying_procedures.workspace = true
aps-freezing_procedure_templates.workspace = true
aps-freezing_procedures.workspace = true
aps-geopositioning_procedure_templates.workspace = true
aps-geopositioning_procedures.workspace = true
aps-harvesting_procedure_templates.workspace = true
aps-harvesting_procedures.workspace = true
aps-next_procedure_templates.workspace = true
aps-packaging_procedure_templates.workspace = true
aps-packaging_procedures.workspace = true
aps-parent_procedure_templates.workspace = true
aps-photograph_procedure_templates.workspace = true
aps-photograph_procedures.workspace = true
aps-pouring_procedure_templates.workspace = true
aps-pouring_procedures.workspace = true
aps-procedure_asset_models.workspace = true
aps-procedure_template_asset_models.workspace = true
aps-procedure_templates.workspace = true
aps-procedures.workspace = true
aps-reused_procedure_template_asset_models.workspace = true
aps-storage_procedure_templates.workspace = true
aps-storage_procedures.workspace = true
aps-supernatant_procedure_templates.workspace = true
aps-supernatant_procedures.workspace = true
aps-weighing_procedure_templates.workspace = true
aps-weighing_procedures.workspace = true

[lints]
workspace = true
