[package]
name = "aps-disposal_procedure_templates"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta_uuid.workspace = true
aps-physical_asset_models.workspace = true
aps-procedure_template_asset_models.workspace = true
aps-procedure_templates.workspace = true
aps-reused_procedure_template_asset_models.workspace = true

[lints]
workspace = true
