[package]
name = "aps-disposal_procedures"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta_uuid.workspace = true
aps-assets.workspace = true
aps-disposal_procedure_templates.workspace = true
aps-physical_asset_models.workspace = true
aps-physical_assets.workspace = true
aps-procedure_asset_models.workspace = true
aps-procedure_template_asset_models.workspace = true
aps-procedures.workspace = true
procedure-like = { path = "../../crates/procedure-like" }

[lints]
workspace = true
