[package]
name = "aps-entities"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
validation-errors.workspace = true
rosetta-uuid.workspace = true
rosetta_timestamp.workspace = true
aps-roles.workspace = true
aps-table_names.workspace = true

[lints]
workspace = true
