[package]
name = "aps-freeze_drying_procedures"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta-uuid.workspace = true
aps-asset_compatibility_rules.workspace = true
aps-assets.workspace = true
aps-entities.workspace = true
aps-freeze_dryer_models.workspace = true
aps-freeze_dryers.workspace = true
aps-freeze_drying_procedure_templates.workspace = true
aps-ownables.workspace = true
aps-procedure_asset_models.workspace = true
aps-procedure_template_asset_models.workspace = true
aps-procedures.workspace = true
aps-volumetric_container_models.workspace = true
aps-volumetric_containers.workspace = true
procedure-like = { path = "../../crates/procedure-like" }

[lints]
workspace = true
